[scheduler] Make long idle periods conform to the spec.

Wait until the old idle period deadline and do not start a new idle period
immediately per paragraph 5.2.2.1 of the spec:
https://w3c.github.io/requestidlecallback/#start-an-event-loop%27s-idle-period

BUG=739750

Change-Id: I3b96ddf92651b0bc4d227cef1c1ac68be7ea9179
Reviewed-on: https://chromium-review.googlesource.com/568301
Reviewed-by: Ross McIlroy <rmcilroy@chromium.org>
Commit-Queue: Alexander Timin <altimin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486368}
Former-commit-id: 67a6ece7daa70d306dce9430e25c2c24b753879f