third_party/WebKit/Source/platform/scheduler/child/idle_helper.cc
@@ -254,18 +254,11 @@ void IdleHelper::UpdateLongIdlePeriodStateAfterIdleTask() {
   } else if (idle_queue_->BlockedByFence()) {
     // If there is still idle work to do then just start the next idle period.
     base::TimeDelta next_long_idle_period_delay;
-    if (state_.idle_period_state() ==
-        IdlePeriodState::IN_LONG_IDLE_PERIOD_WITH_MAX_DEADLINE) {
-      // If we are in a max deadline long idle period then start the next
-      // idle period immediately.
-      next_long_idle_period_delay = base::TimeDelta();
-    } else {
-      // Otherwise ensure that we kick the scheduler at the right time to
-      // initiate the next idle period.
-      next_long_idle_period_delay = std::max(
-          base::TimeDelta(), state_.idle_period_deadline() -
-                                 helper_->scheduler_tqm_delegate()->NowTicks());
-    }
+    // Ensure that we kick the scheduler at the right time to
+    // initiate the next idle period.
+    next_long_idle_period_delay = std::max(
+        base::TimeDelta(), state_.idle_period_deadline() -
+                               helper_->scheduler_tqm_delegate()->NowTicks());
     if (next_long_idle_period_delay.is_zero()) {
       EnableLongIdlePeriod();
     } else {
